--- a/Insincere_Text_Classification_using_Bert/Main.ipynb
+++ b/Insincere_Text_Classification_using_Bert/Main.ipynb
@@ -443,6 +443,7 @@
     }
    ],
    "source": [
+    "# To make I/O bottleneck more efficient\n",
     "with tf.device('/cpu:0'):\n",
     "  train_data = tf.data.Dataset.from_tensor_slices((train_df.question_text.values, train_df.target.values))\n",
     "  valid_data = tf.data.Dataset.from_tensor_slices((valid_df.question_text.values, valid_df.target.values))\n",
@@ -557,27 +558,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "3FTqJ698zZ1e"
-   },
-   "source": [
-    "<div align=\"center\">\n",
-    "    <img width=\"512px\" src='https://drive.google.com/uc?id=1-SpKFELnEvBMBqO7h3iypo8q9uUUo96P' />\n",
-    "    <p style=\"text-align: center;color:gray\">Figure 2: BERT Tokenizer</p>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "cWYkggYe6HZc"
-   },
-   "source": [
-    "We'll need to transform our data into a format BERT understands. This involves two steps. First, we create InputExamples using `classifier_data_lib`'s constructor `InputExample` provided in the BERT library."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -596,20 +576,6 @@
     "                                    max_seq_length, tokenizer)\n",
     "  \n",
     "  return (feature.input_ids, feature.input_mask, feature.segment_ids, feature.label_id)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "A_HQSsHwWCsK"
-   },
-   "source": [
-    "You want to use [`Dataset.map`](https://www.tensorflow.org/api_docs/python/tf/data/Dataset#map) to apply this function to each element of the dataset. [`Dataset.map`](https://www.tensorflow.org/api_docs/python/tf/data/Dataset#map) runs in graph mode.\n",
-    "\n",
-    "- Graph tensors do not have a value.\n",
-    "- In graph mode you can only use TensorFlow Ops and functions.\n",
-    "\n",
-    "So you can't `.map` this function directly: You need to wrap it in a [`tf.py_function`](https://www.tensorflow.org/api_docs/python/tf/py_function). The [`tf.py_function`](https://www.tensorflow.org/api_docs/python/tf/py_function) will pass regular tensors (with a value and a `.numpy()` method to access it), to the wrapped python function."
    ]
   },
   {
@@ -753,18 +719,6 @@
    },
    "source": [
     "### Fine-Tuning BERT for Text Classification"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "9THH5V0Dw2HO"
-   },
-   "source": [
-    "<div align=\"center\">\n",
-    "    <img width=\"512px\" src='https://drive.google.com/uc?id=1fnJTeJs5HUpz7nix-F9E6EZdgUflqyEu' />\n",
-    "    <p style=\"text-align: center;color:gray\">Figure 3: BERT Layer</p>\n",
-    "</div>"
    ]
   },
   {
